# ndn-interpreter

./: .gitignore  Dockerfile  Makefile  README.md  benchmark.py  docker-compose.yaml  flow.mmd  flow_data.mmd  flow_func.mmd  pyproject.toml
examples/: hello.ndn  remote.ndn  temperature.ndn
ndn-language-vscode/: language-configuration.json  package.json
ndn-language-vscode/syntaxes/: ndn.tmLanguage.json
ndnnet-generator/: .gitignore  README.md
ndnnet-generator/config/: dockerfile  node_info.csv  requirements.txt
ndnnet-generator/ndn_clients/: consumer.py
ndnnet-generator/ndn_clients/lib/: ndn_function.py  ndn_utils.py
ndnnet-generator/shell/: auto_nlsr.sh  restart.sh
ndnnet-generator/src/: main.py
ndnnet-generator/src/utils/: nlsr_config_generator.py  read_network_relations_from_csv.py
ndnnet-generetor/: MEMO.md
ndnnet-generetor/config/: network_relations.csv
ndnnet-generetor/ndn_clients/: function.py  producer.py
ndnnet-generetor/ndn_clients/lib/: consumer_args.py  ndn_producer.py
ndnnet-generetor/src/utils/: docker_compose_generator.py  read_node_info_from_csv.py
src/ndnc/: cli.py  remote_modify.py  server.py
src/ndnc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/ndnc/interp/: evaluator.py
src/ndnc/parser/: ast.py  grammar.lark  parser.py
